Edit Classroom Fixed
-Caught one of the last dark mode fixes. Edit classroom still displayed white text, making it unreadable.

--- a/teacher-toolbox/src/app/classrooms/classrooms-list/classrooms-list.component.css
+++ b/teacher-toolbox/src/app/classrooms/classrooms-list/classrooms-list.component.css
@@ -21,3 +21,11 @@
 .card-text{
     color:black;
 }
+
+.modal-title{
+    color:black;
+}
+
+.modal-body{
+    color:black;
+}
