--- a/teacher-toolbox/src/app/classrooms/classrooms.component.css
+++ b/teacher-toolbox/src/app/classrooms/classrooms.component.css
@@ -26,6 +26,4 @@
     color:black;
 }
 
-#exportStudentsTemplate{
-    color:green;
-}
+
